--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
+ 
 }
-
+body {
+  background-color: rgb(113, 113, 114);
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -21,7 +24,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 .App-link {
