--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
 .App {
-  text-align: left;
+  text-align: center;
  
 }
-body {
-  background-color: rgb(113, 113, 114);
-}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
